--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,20 +1,50 @@
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+<header class="py-3 bg-gray-800 text-white">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-wrap items-center justify-center lg:justify-start">
+      <ul
+        class="nav flex lg:flex-row lg:space-x-4 mx-auto lg:mx-0 mb-2 mb-md-0"
+      >
+        <li>
+          <a routerLink="/" class="nav-link px-2 text-gray-400 hover:text-white"
+            >Home</a
+          >
+        </li>
+        <!-- Add other navigation items here -->
+        <li>
+          <a
+            routerLink="/about"
+            class="nav-link px-2 text-gray-400 hover:text-white"
+            >About</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/contact"
+            class="nav-link px-2 text-gray-400 hover:text-white"
+            >Contact</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/profile"
+            class="nav-link px-2 text-gray-400 hover:text-white"
+            >Profile</a
+          >
+        </li>
+      </ul>
 
-
-
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a routerLink="/" class="nav-link px-2 text-secondary">Home</a></li>
-
-            </ul>
-
-
-
-            <div class="text-end">
-                <a routerLink="/login" class="btn btn-outline-light me-2">Login</a>
-                <a routerLink="/register" class="btn btn-outline-light me-2">Register</a>
-            </div>
-        </div>
+      <div class="text-end ml-auto">
+        <a
+          routerLink="/login"
+          class="btn border border-white text-white hover:bg-white hover:text-gray-800 py-2 px-4 rounded"
+          >Login</a
+        >
+        <a
+          routerLink="/register"
+          class="btn border border-white text-white hover:bg-white hover:text-gray-800 py-2 px-4 rounded ml-2"
+          >Register</a
+        >
+      </div>
     </div>
+  </div>
 </header>
