--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,17 +1,31 @@
-<body class="text-center">
-    <form [formGroup]="form" (submit)="submit()">
+<body class="flex justify-center items-center h-screen bg-gray-100">
+  <form [formGroup]="form" (submit)="submit()" class="w-full max-w-xs">
+    <h1 class="text-lg font-semibold mb-6">Sign in Page</h1>
+    <div class="mb-4">
+      <input
+        formControlName="email"
+        type="email"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Email address"
+        required
+        autofocus
+      />
+    </div>
+    <div class="mb-4">
+      <input
+        formControlName="password"
+        type="password"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Password"
+        required
+      />
+    </div>
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label>Email address</label>
-        <input formControlName="email" type="email" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input formControlName="password" type="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
-    </form>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full"
+      type="submit"
+    >
+      Sign in
+    </button>
+  </form>
 </body>
