--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,30 +1,63 @@
-<body class="text-center">
-    <form [formGroup]="form" (submit)="submit()">
+<body class="flex justify-center items-center h-screen bg-gray-100">
+  <form [formGroup]="form" (submit)="submit()" class="w-full max-w-xs">
+    <h1 class="text-lg font-semibold mb-6">Sign up Page</h1>
 
-        <h1 class="h3 mb-3 font-weight-normal"> sign up</h1>
+    <div class="mb-4">
+      <input
+        formControlName="firstname"
+        type="text"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="First name"
+        required
+        autofocus
+      />
+    </div>
 
-        <label>First name</label>
-        <input formControlName="first_name" type=" password" class="form-control" placeholder="First Name" required>
+    <div class="mb-4">
+      <input
+        formControlName="lastname"
+        type="text"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Last name"
+        required
+      />
+    </div>
 
-        <label>Last Name</label>
-        <input formControlName="last_name" type="password" class="form-control" placeholder="Last Name" required>
+    <div class="mb-4">
+      <input
+        formControlName="email"
+        type="email"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Email address"
+        required
+      />
+    </div>
 
-        <label>Email address</label>
-        <input formControlName="email" type="email" class="form-control" placeholder="Email address" required autofocus>
+    <div class="mb-4">
+      <input
+        formControlName="password"
+        type="password"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Password"
+        required
+      />
+    </div>
 
-        <label>Password</label>
-        <input formControlName="password" type="password" class="form-control" placeholder="Password" required>
+    <div class="mb-4">
+      <input
+        formControlName="confirmPassword"
+        type="password"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Confirm password"
+        required
+      />
+    </div>
 
-        <label>Password Confirm</label>
-        <input formControlName="password_confirm" type="password" class="form-control" placeholder="Password Confirm"
-            required>
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-
-    </form>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full"
+      type="submit"
+    >
+      Sign up
+    </button>
+  </form>
 </body>
