--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -4,22 +4,12 @@
 
     <div class="mb-4">
       <input
-        formControlName="firstname"
+        formControlName="username"
         type="text"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        placeholder="First name"
+        placeholder="User name"
         required
         autofocus
-      />
-    </div>
-
-    <div class="mb-4">
-      <input
-        formControlName="lastname"
-        type="text"
-        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        placeholder="Last name"
-        required
       />
     </div>
 
@@ -35,7 +25,7 @@
 
     <div class="mb-4">
       <input
-        formControlName="password"
+        formControlName="password1"
         type="password"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="Password"
@@ -45,7 +35,7 @@
 
     <div class="mb-4">
       <input
-        formControlName="confirmPassword"
+        formControlName="password2"
         type="password"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="Confirm password"
