--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -3,10 +3,10 @@
     <h1 class="text-lg font-semibold mb-6">Sign in Page</h1>
     <div class="mb-4">
       <input
-        formControlName="email"
-        type="email"
+        formControlName="username"
+        type="username"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        placeholder="Email address"
+        placeholder="User name"
         required
         autofocus
       />
