--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -15,6 +15,26 @@
 
     <div class="mb-4">
       <input
+        formControlName="first_name"
+        type="text"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="First name"
+        required
+      />
+    </div>
+
+    <div class="mb-4">
+      <input
+        formControlName="last_name"
+        type="text"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        placeholder="Last name"
+        required
+      />
+    </div>
+
+    <div class="mb-4">
+      <input
         formControlName="email"
         type="email"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
@@ -25,7 +45,7 @@
 
     <div class="mb-4">
       <input
-        formControlName="password1"
+        formControlName="password"
         type="password"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="Password"
@@ -35,7 +55,7 @@
 
     <div class="mb-4">
       <input
-        formControlName="password2"
+        formControlName="re_password"
         type="password"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="Confirm password"
